Initializing a web frontent
